deploy/kubernetes/examples/kube-nextcloud/nextcloud-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: kube-nextcloud
  labels:
    app: kube-nextcloud
spec:
  selector:
    app: kube-nextcloud
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
